# Scripta

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  e2e.yml  pages.yml  release.yml
assets/: index-BDndX9ek.js  index-CigUfjGo.css  index-DhW2c6ns.js
e2e-tests/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e-tests/helpers/: app.helpers.ts  editor.helpers.ts  selectors.ts
e2e-tests/test/: ai-features.e2e.ts  app-launch.e2e.ts  editor-commands.e2e.ts
patches/: @blocknote+core+0.47.2.patch  @blocknote+xl-multi-column+0.47.2.patch
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/ScriptaTranslation/: Package.resolved  Package.swift
src-tauri/ScriptaTranslation/Sources/ScriptaTranslation/: EmbeddingBridge.swift  SummarizationBridge.swift  TranslationBridge.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  embedding.rs  file_io.rs  groups.rs  lib.rs  link_preview.rs  main.rs  summarization.rs  translation.rs  window.rs
src/app/providers/: editor-font-provider.tsx  font-size-provider.tsx  store-provider.tsx  theme-provider.tsx  toolbar-config-provider.tsx  update-provider.tsx  window-title-prefix-provider.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  switch.tsx  textarea.tsx  tooltip.tsx
src/data/: googleFonts.d.ts  googleFonts.json
src/features/app-update/: index.ts
src/features/bug-report/: index.ts
src/features/editor/: index.ts
src/features/groups/: index.ts
src/features/settings/: index.ts
src/features/sidebar/: index.ts
src/features/splash/: index.ts
src/features/summarization/: index.ts
website/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
website/src/: App.tsx  main.tsx
(+137 files in other folders)
